Include title() & dedup() output in API response when testing a Rule
Fixes #1449
